updates on index file

--- a/qrcodecomponent.css
+++ b/qrcodecomponent.css
@@ -24,7 +24,7 @@ div.qrcodecomponent {
     left: 50%;
     transform: translate(-50%, -50%);
     width: 250px;
-    height: 430px;
+    height: 450px;
     background-color: #FFFFFF;
     border-radius: 20px;
 }
@@ -43,7 +43,7 @@ div.qrcode {
 }
 
 div.description {
-    padding: 5px 0;
+    padding: 0;
 }
 
 div.description h1 {
@@ -60,4 +60,17 @@ div.description p {
     margin: 15px;
     text-align: center;
     color: hsl(220, 15%, 55%);
+}
+
+div.madeby {
+    margin: 0;
+    text-align: center;
+}
+
+div.madeby p {
+    font-size: 18px;
+    font-weight: 700;
+    margin: 0;
+    text-align: center;
+    color: hsl(218, 44%, 22%);
 }
